--- a/DentalClinic_FrontEnd/DentalClinic/src/scss/_custom.scss
+++ b/DentalClinic_FrontEnd/DentalClinic/src/scss/_custom.scss
@@ -64,7 +64,7 @@ i.fa{
   }
 
   td.mat-cell.cdk-cell.cdk-column-Description.mat-column-Description.ng-star-inserted{
-    text-align: right;
+    text-align: left;
   }
   .mat-form-field-appearance-fill .mat-form-field-flex {
     background: white;
